# dotfilesctl

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  shell.bash
.github/workflows/: rust.yml
resources/: cli.yml
src/: commands.rs  config.rs  dotfiles.rs  main.rs  paths.rs  perm.rs  util.rs
