[package]
name = "dotfilesctl"
version = "0.2.1-alpha.0"
authors = ["Lars Hupel <lars@hupel.info>"]
repository = "https://github.com/larsrh/dotfilesctl"
homepage = "https://github.com/larsrh/dotfilesctl"
readme = "README.md"
license = "Apache-2.0"
description = """
An application for tracking dotfiles, without assumptions about the backend storage.
"""

[dependencies]
clap = { version = "^2.30", features = ["yaml"] }
env_logger = "^0.5"
failure = "^0.1"
fs_extra = "^1.1"
log = "^0.4"
notify = "^4.0"
notify-rust = "^3"
pretty_env_logger = "^0.2"
serde = "^1.0"
serde_derive = "^1.0"
tempdir = "^0.3"
toml = "^0.4"
xdg = "^2.1"

[dev-dependencies]
proptest = "^0.4"

[package.metadata.release]
sign-commit = true
tag-prefix = "v"
disable-push = true
