[package]
name = "dotfilesctl"
edition = "2018"
version = "0.2.1-alpha.0"
authors = ["Lars Hupel <lars@hupel.info>"]
repository = "https://github.com/larsrh/dotfilesctl"
homepage = "https://github.com/larsrh/dotfilesctl"
readme = "README.md"
license = "Apache-2.0"
description = """
An application for tracking dotfiles, without assumptions about the backend storage.
"""

[dependencies]
anyhow = "^1.0"
clap = { version = "^3", features = ["cargo", "yaml"] }
clap_complete = "^3"
dirs = "^5.0"
env_logger = "^0.10"
fs_extra = "^1.3"
log = "^0.4"
pretty_env_logger = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
thiserror = "^1.0"
toml = "^0.7"
xdg = "^2.4"

[dev-dependencies]
proptest = "^1.1"
tempfile = "^3"

[package.metadata.release]
sign-commit = true
tag-prefix = "v"
disable-push = true
